<resources>
    <string name="app_name">Pictoevents</string>
    <string name="captureImageButtonDesc">Capture image button</string>
    <string name="openCamera">Open camera</string>
    <string name="addEvent_Camera">Camera</string>
    <string name="add_edit_Event">Edit events</string>
    <string name="viewFiles">Files</string>
    <string name="calendar">Calendar</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Title">Event title</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="TitleDialogMessage">Select a title or create later</string>
    <string name="TitleDialogConfirm">Confirm</string>
    <string name="title_option_A">%1$s</string>
    <string name="title_option_B">%1$s</string>
    <string name="title_option_Custom">Create later</string>
    <string name="event_created_notification">Event: %1s created</string>
    <string name="retake">Retake</string>
    <string name="ok">Ok</string>
    <string name="progress">Please wait, identifying event information</string>
    <string name="eventCreatedText">Your event was created</string>
    <string name="eventDate">mm/dd/yyyy</string>
    <string name="eventTime">hh:mm</string>
    <string name="event_am">AM</string>
    <string name="event_pm">PM</string>
    <string name="am_or_pm">AM or PM</string>

    <string name="error_no_activity">No activity found to open "%1$s".</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
