<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".UI.TitleDialogFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="653dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/option_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_option_A" />

        <RadioButton
            android:id="@+id/option_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_option_B" />

        <RadioButton
            android:id="@+id/custom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_option_Custom" />

        <EditText
            android:id="@+id/custom_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/Title"
            android:hint="@string/Title"
            android:inputType="textAutoCorrect"
            android:visibility="invisible" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>